# vanguard

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  biome.json  components.json  feasibility-report.md  package.json  pnpm-lock.yaml  spotlight.html  vite.config.ts
docs/: PushType.md  bitwarden-style-unlock-implementation-split-2026-03-03.md  bitwarden-style-unlock-redesign-no-migration-2026-03-03.md  login-unlock-sync-performance-analysis-2026-03-03.md  release-process.md  rust-code-review-findings-2026-03-03.md  rust-ddd-structure.md  send-crud-task-list.md  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  spotlight.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/application/: cipher_encryption.rs  cipher_key.rs  mod.rs  send_encryption.rs  totp.rs  vault_crypto.rs
src-tauri/src/application/crypto/: cipher_string.rs  encryption.rs  key_derivation.rs  mod.rs  rsa_keys.rs  symmetric_key.rs
src-tauri/src/application/dto/: auth.rs  cipher.rs  decrypt.rs  folder.rs  mod.rs  notification.rs  sync.rs  unlock.rs  vault.rs
src-tauri/src/application/policy/: mod.rs  sync_policy.rs
src-tauri/src/application/ports/: biometric_unlock_port.rs  clipboard_port.rs  master_password_unlock_data_port.rs  mod.rs  notification_port.rs  pin_unlock_port.rs  remote_vault_port.rs  sync_event_port.rs  text_injection_port.rs  unlock_context_port.rs  vault_repository_port.rs  vault_runtime_port.rs
src-tauri/src/application/services/: auth_service.rs  mod.rs  realtime_sync_service.rs  registration_service.rs  sync_service.rs
src-tauri/src/application/use_cases/: copy_cipher_field_use_case.rs  create_cipher_use_case.rs  create_send_use_case.rs  delete_cipher_use_case.rs  delete_send_use_case.rs  fetch_cipher_use_case.rs  get_cipher_detail_use_case.rs  get_cipher_totp_code_use_case.rs  get_vault_view_data_use_case.rs  list_ciphers_use_case.rs  list_sends_use_case.rs  master_password_unlock_use_case.rs  mod.rs  poll_revision_use_case.rs  remove_send_password_use_case.rs  restore_cipher_use_case.rs  soft_delete_cipher_use_case.rs  sync_vault_use_case.rs  unlock_vault_use_case.rs  unlock_vault_with_password_use_case.rs  update_cipher_use_case.rs  update_send_use_case.rs  vault_biometric_use_case.rs  vault_pin_use_case.rs
src-tauri/src/bootstrap/: app_state.rs  auth_persistence.rs  auth_persistence_port.rs  config.rs  desktop.rs  mod.rs  unlock_context_impl.rs  unlock_state.rs  wiring.rs
src-tauri/src/command/: auth.rs
src-tauri/src/domain/: crypto.rs  mod.rs  totp.rs
src-tauri/src/domain/auth/: account.rs
src-tauri/src/domain/cipher/: convert.rs  field.rs  mod.rs  serde_helpers.rs  state.rs  types.rs
src-tauri/src/domain/sync/: mod.rs  push_type.rs  sync_policy.rs
src-tauri/src/domain/unlock/: mod.rs
src-tauri/src/domain/vault/: mod.rs
src-tauri/src/infrastructure/: mod.rs
src-tauri/src/infrastructure/desktop/: focus_tracker.rs  mod.rs  text_injection_adapter.rs
src-tauri/src/infrastructure/icon/: cache.rs  downloader.rs  mod.rs  service.rs
src-tauri/src/infrastructure/persistence/: in_memory_vault_repository.rs  master_password_unlock_data_port_adapter.rs  mod.rs  sqlite_vault_repository.rs
src-tauri/src/infrastructure/security/: biometric_store.rs  biometric_unlock_port_adapter.rs  clipboard_port_adapter.rs  mod.rs  pin_store.rs  pin_unlock_port_adapter.rs
src-tauri/src/infrastructure/vaultwarden/: client.rs  config.rs  endpoints.rs  error.rs  mapper.rs  mod.rs  models.rs  notification_port_adapter.rs  password_hash.rs  port_adapter.rs  registration_adapter.rs
src-tauri/src/interfaces/tauri/: account_id.rs  mapping.rs  mod.rs  session.rs
src-tauri/src/interfaces/tauri/commands/: auth.rs  cipher.rs  config.rs  desktop.rs  folder.rs  icon.rs  mod.rs  send.rs  ssh.rs  sync.rs  unlock_state.rs  vault.rs
src-tauri/src/interfaces/tauri/desktop/: constants.rs  main_window.rs  mod.rs  monitor.rs  shortcut_utils.rs  spotlight.rs  tray.rs  tray_click_snapshot.rs  tray_i18n.rs  window_placement.rs
src-tauri/src/interfaces/tauri/dto/: auth.rs  cipher.rs  folder.rs  mod.rs  send.rs  sync.rs  unlock_state.rs  vault.rs
src-tauri/src/interfaces/tauri/events/: cipher.rs  mod.rs  send.rs  sync.rs  sync_event_adapter.rs  unlock_state.rs
src-tauri/src/service/: auth.rs
src-tauri/src/support/: error.rs  mod.rs  redaction.rs
src-tauri/src/util/: mod.rs  tauri_store.rs
(+241 files in other folders)
