[package]
name = "vanguard"
version = "0.6.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vanguard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-log = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "form", "query", "rustls"] }
async-trait = "0.1"
specta = { version = "=2.0.0-rc.22", features = ["derive", "serde_json"] }
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
specta-typescript = "0.0.9"
pbkdf2 = "0.12"
sha2 = "0.10"
argon2 = "0.5"
base64 = "0.22"
aes = "0.8"
cbc = { version = "0.1", features = ["std"] }
hmac = "0.12"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["time", "fs"] }
rusqlite = { version = "0.38", features = ["bundled"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
rmpv = "1"
chacha20poly1305 = "0.10"
rand = "0.10"
zeroize = { version = "1", features = ["derive"] }
rsa = "0.9"
hkdf = "0.12"
tauri-plugin-clipboard-manager = "2"
totp-rs = { version = "5.7.0", features = ["otpauth"] }
chrono = { version = "0.4", features = ["serde"] }
image = { version = "0.25.10", features = ["png"] }
dirs = "6"
hex = "0.4"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-positioner = "2"
tauri-plugin-single-instance = "2"

[target."cfg(target_os = \"macos\")".dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
security-framework = "3"
security-framework-sys = "2"
core-foundation = "0.10"
objc2 = "0.6.4"
objc2-foundation = { version = "0.3.2", features = ["NSError", "NSObject", "NSString"] }
enigo = "0.6"
accessibility-sys = "0.1"

[dev-dependencies]
tempfile = "3"
